--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
-*{margin: 0;
+*{
+    margin: 0;
     padding: 0;
 }
 
 body{
     background-color: red;
+    overflow: hidden;
 }
 .gameContainer{
-    background-image: url(./images/bg.png);
+    background-image:url(./images/bg.png);
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
-    height: 100vh;
     width: 100%;
-
-
+    height: 100vh;
 }
-
 .dino{
     background-image: url(./images/dino.png);
-    background-repeat: no-repeat;
+    background-repeat: no repeat;
     background-size: cover;
     width: 233px;
     height: 114px;
     bottom: 0;
     left: 52px;
     position: absolute;
+    
 }
 
 .obstacle{
@@ -34,62 +34,47 @@ body{
     bottom: 0;
     left: 44vw;
     position: absolute;
-
-
 }
-.animateDino{
+.animateDino {
     animation: dino 0.6s linear;
 }
 
 .obstacleAni{
-    animation: obstacleAni 0.5s linear infinite;
-
+    animation: obstacleAni 5s linear infinite;
+}
+.gameOver{
+    position: relative;
+    top: 65px;
+    font-size: 50px;
+    text-align: center;
+    font-family: sans-serif;
 }
 
-.gameOvera{
-
-    position: absolute;
-
-
-}
-
-#scoreCount{
+#scoreCont{
     font-size: 25px;
-    color: wheat;
+    color: #54212f;
     font-weight: bold;
     position: absolute;
     right: 45px;
-    top:31px;
+    top: 31px;
     border: 2px solid black;
     padding: 10px;
     border-radius: 10px;
-
-
-
-
 }
-
-
-
 @keyframes dino{
     0%{
         bottom: 0;
-
     }
     50%{
         bottom: 422px;
-
     }
 }
 
 @keyframes obstacleAni{
     0%{
-        left:100vw;
-
+        left: 100vw;
     }
     100%{
-        left:100vw;
-
+        left: -10vw;
     }
-
 }
